Updating .gitignore to ignore output from sample project build.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ profile
 **/doxygen/doc
 **/doxygen/build
 extras/Projucer/JUCECompileEngine.dylib
+
+# ARA sample project build output
+examples/ARA/Builds*
+examples/ARA/JuceLibraryCode*
