--- a/.gitignore
+++ b/.gitignore
@@ -68,5 +68,5 @@ profile
 extras/Projucer/JUCECompileEngine.dylib
 
 # ARA sample project build output
-examples/ARA/Builds*
-examples/ARA/JuceLibraryCode*
+examples/ARA/*/Builds*
+examples/ARA/*/JuceLibraryCode*
