Started to use Forte types, decided to use two M1's

--- a/extras/AudioPluginHost/Builds/LinuxMakefile/Makefile
+++ b/extras/AudioPluginHost/Builds/LinuxMakefile/Makefile
@@ -68,6 +68,10 @@ ifeq ($(CONFIG),Release)
 endif
 
 OBJECTS_APP := \
+  $(JUCE_OBJDIR)/tinystr_444e2d93.o \
+  $(JUCE_OBJDIR)/tinyxml_4086dc79.o \
+  $(JUCE_OBJDIR)/tinyxmlerror_bb370179.o \
+  $(JUCE_OBJDIR)/tinyxmlparser_13558e18.o \
   $(JUCE_OBJDIR)/FilterGraph_769715e3.o \
   $(JUCE_OBJDIR)/FilterIOConfiguration_d1cf3d25.o \
   $(JUCE_OBJDIR)/InternalFilters_eceadbab.o \
@@ -101,6 +105,26 @@ $(JUCE_OUTDIR)/$(JUCE_TARGET_APP) : check-pkg-config $(OBJECTS_APP) $(RESOURCES)
 	-$(V_AT)mkdir -p $(JUCE_LIBDIR)
 	-$(V_AT)mkdir -p $(JUCE_OUTDIR)
 	$(V_AT)$(CXX) -o $(JUCE_OUTDIR)/$(JUCE_TARGET_APP) $(OBJECTS_APP) $(JUCE_LDFLAGS) $(JUCE_LDFLAGS_APP) $(RESOURCES) $(TARGET_ARCH)
+
+$(JUCE_OBJDIR)/tinystr_444e2d93.o: ../../Source/ForteEmulator/ForteSDK/tinyxml/tinystr.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling tinystr.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/tinyxml_4086dc79.o: ../../Source/ForteEmulator/ForteSDK/tinyxml/tinyxml.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling tinyxml.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/tinyxmlerror_bb370179.o: ../../Source/ForteEmulator/ForteSDK/tinyxml/tinyxmlerror.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling tinyxmlerror.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/tinyxmlparser_13558e18.o: ../../Source/ForteEmulator/ForteSDK/tinyxml/tinyxmlparser.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling tinyxmlparser.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
 
 $(JUCE_OBJDIR)/FilterGraph_769715e3.o: ../../Source/Filters/FilterGraph.cpp
 	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
