GUI hooked up, muted rows

--- a/extras/AudioPluginHost/Builds/LinuxMakefile/Makefile
+++ b/extras/AudioPluginHost/Builds/LinuxMakefile/Makefile
@@ -68,6 +68,7 @@ ifeq ($(CONFIG),Release)
 endif
 
 OBJECTS_APP := \
+  $(JUCE_OBJDIR)/MIDIRouter_13f7d633.o \
   $(JUCE_OBJDIR)/tinystr_444e2d93.o \
   $(JUCE_OBJDIR)/tinyxml_4086dc79.o \
   $(JUCE_OBJDIR)/tinyxmlerror_bb370179.o \
@@ -106,6 +107,11 @@ $(JUCE_OUTDIR)/$(JUCE_TARGET_APP) : check-pkg-config $(OBJECTS_APP) $(RESOURCES)
 	-$(V_AT)mkdir -p $(JUCE_LIBDIR)
 	-$(V_AT)mkdir -p $(JUCE_OUTDIR)
 	$(V_AT)$(CXX) -o $(JUCE_OUTDIR)/$(JUCE_TARGET_APP) $(OBJECTS_APP) $(JUCE_LDFLAGS) $(JUCE_LDFLAGS_APP) $(RESOURCES) $(TARGET_ARCH)
+
+$(JUCE_OBJDIR)/MIDIRouter_13f7d633.o: ../../Source/MIDIRouter.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling MIDIRouter.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
 
 $(JUCE_OBJDIR)/tinystr_444e2d93.o: ../../Source/ForteEmulator/ForteSDK/tinyxml/tinystr.cpp
 	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
