--- a/extras/NetworkGraphicsDemo/Builds/Android/app/src/main/AndroidManifest.xml
+++ b/extras/NetworkGraphicsDemo/Builds/Android/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
   <uses-permission android:name="android.permission.BLUETOOTH"/>
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
-  <application android:label="@string/app_name" android:name="com.roli.juce.JuceApp" android:icon="@drawable/icon">
-    <activity android:name="android.app.Activity" android:label="@string/app_name" android:configChanges="keyboardHidden|orientation"
-              android:screenOrientation="unspecified" android:launchMode="singleTask">
+  <application android:label="@string/app_name" android:name="com.roli.juce.JuceApp" android:icon="@drawable/icon" android:hardwareAccelerated="false">
+    <activity android:name="android.app.Activity" android:label="@string/app_name" android:configChanges="keyboardHidden|orientation|screenSize"
+              android:screenOrientation="unspecified" android:launchMode="singleTask" android:hardwareAccelerated="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
