Re-structured the low-level Android native code
Please see the forum post "Re-structuring of JUCE’s low-level Android code" and the BREAKING-CHANGES.txt for more information.

--- a/examples/DemoRunner/Builds/Android/app/build.gradle
+++ b/examples/DemoRunner/Builds/Android/app/build.gradle
@@ -83,11 +83,21 @@ android {
         }
     }
 
-repositories {
-}
+    sourceSets {
+        main.java.srcDirs +=
+            ["../../../../../modules/juce_audio_devices/native/java",
+             "../../../../../modules/juce_core/native/java",
+             "../../../../../modules/juce_gui_basics/native/java",
+             "../../../../../modules/juce_gui_extra/native/java",
+             "../../../../../modules/juce_opengl/native/java",
+             "../../../../../modules/juce_video/native/java"]
+    }
 
-dependencies {
-}
+    repositories {
+    }
+
+    dependencies {
+    }
 
 
 }
