--- a/extras/AudioPerformanceTest/Builds/Android/app/build.gradle
+++ b/extras/AudioPerformanceTest/Builds/Android/app/build.gradle
@@ -86,11 +86,19 @@ android {
         }
     }
 
-repositories {
-}
+    sourceSets {
+        main.java.srcDirs +=
+            ["../../../../../modules/juce_audio_devices/native/java",
+             "../../../../../modules/juce_core/native/java",
+             "../../../../../modules/juce_gui_basics/native/java",
+             "../../../../../modules/juce_gui_extra/native/java"]
+    }
 
-dependencies {
-}
+    repositories {
+    }
+
+    dependencies {
+    }
 
 
 }
